; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/bios/extr_vidbios.c_VgaSetSinglePaletteRegister.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/bios/extr_vidbios.c_VgaSetSinglePaletteRegister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VGA_INSTAT1_READ = common dso_local global i32 0, align 4
@VGA_AC_INDEX = common dso_local global i32 0, align 4
@VGA_AC_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @VgaSetSinglePaletteRegister to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @VgaSetSinglePaletteRegister(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @VGA_INSTAT1_READ, align 4
  %7 = call i32 @IOReadB(i32 %6)
  %8 = load i32, i32* @VGA_AC_INDEX, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @IOWriteB(i32 %8, i32 %9)
  %11 = load i32, i32* @VGA_AC_WRITE, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @IOWriteB(i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @IOReadB(i32) #1

declare dso_local i32 @IOWriteB(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
